texi2html/test/invalid/res_info/texi_tex_in_copying/tex_in_copying.texi.first
\input texinfo @c -*-texinfo-*-

@setfilename tex_in_copying.info



@node Top
@top Top node

Some equation is indeed needed to understand the copyright of
that file
@tex 
From @ someone <> !
$$
a = \phi
$$
@end tex


@menu
* chapter::
@end menu

Some equation is indeed needed to understand the copyright of
that file
@tex 
From @ someone <> !
$$
a = \phi
$$
@end tex


@node chapter
@chapter chapter

The fundamental equation is
@tex 
$$
2 a = \dot{\phi}
$$
@end tex

Some equation is indeed needed to understand the copyright of
that file
@tex 
From @ someone <> !
$$
a = \phi
$$
@end tex



@bye
